fix(QIcon): revert overflow hidden on Mat Icons because some overflow their content box

--- a/ui/src/components/icon/QIcon.styl
+++ b/ui/src/components/icon/QIcon.styl
@@ -35,9 +35,3 @@
   align-items: center
   justify-content: center
   vertical-align: middle
-
-.material-icons,
-.material-icons-outlined,
-.material-icons-round,
-.material-icons-sharp
-  overflow: hidden
